MCKIN-11050 - fixed the position of the tooltip which was overlapping with content. (#3194)

--- a/static_v2/scss/common/_popover.scss
+++ b/static_v2/scss/common/_popover.scss
@@ -30,10 +30,10 @@
   }
   &.bs-popover-left,
   &.bs-popover-right {
-    margin-top: 5px;
+    // margin-top: 5px;
   }
   &.bs-popover-bottom {
-    margin-top: 10px;
+    // margin-top: 10px;
   }
 
   &.bs-popover-left,
@@ -86,12 +86,12 @@
 
 .bs-popover-right>.arrow,
 .bs-popover-auto[x-placement^="right"]>.arrow {
-  left: -5px;
+  // left: -5px;
 }
 
 .bs-popover-left>.arrow,
 .bs-popover-auto[x-placement^="left"]>.arrow {
-  right: -5px;
+  // right: -5px;
 }
 
 .bs-popover-right > .arrow::after,
@@ -101,7 +101,7 @@
 
 .bs-popover-bottom>.arrow,
 .bs-popover-auto[x-placement^="bottom"]>.arrow {
-  top: -5px;
+  // top: -5px;
 }
 
 .bs-popover-top > .arrow::after, .bs-popover-auto[x-placement^="top"] > .arrow::after {
@@ -114,7 +114,7 @@
 @include media-breakpoint-between(xs, sm) {
   .popover{
     &.bs-popover-bottom {
-      margin-top: -15px;
+      // margin-top: -15px;
     }
   }
   .lessonPageBody{
